--- a/illopintu/Views/Login/Index.cshtml
+++ b/illopintu/Views/Login/Index.cshtml
@@ -15,8 +15,22 @@
         <input class="form-control" type="password" name="password" />
     </div>
     <div class="form-group">
-        <input class="btn btn-default" type="submit" value="Login"/>
-        <button href="@Url.Action("register","Login")" type="button" class="btn btn-default">Register</button>
+        <input class="btn btn-default" type="submit" value="Login"/>        
+    </div>
+</form>
+
+<form class="form form-horizontal" action="register" method="post">
+    <div class="form-group">
+        <label class="control-label">User:</label>
+        <input class="form-control" type="text" name="user" />
+    </div>
+    <div class="form-group">
+        <label class="control-label">Password</label>
+        <input class="form-control" type="password" name="password" />
+        <input class="form-control" type="password" name="confirmarPassword" />
+    </div>
+    <div class="form-group">
+        <input class="btn btn-default" type="submit" value="register" />
     </div>
 </form>
 
