--- a/illopintu/Views/Login/Index.cshtml
+++ b/illopintu/Views/Login/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Login</h2>
 
-<form class="form form-horizontal" action="login" method="post">
+<form class="form form-horizontal" action="Login/login" method="post">
     <div class="form-group">
         <label class="control-label">User:</label>
         <input class="form-control" type="text" name="user"/>
@@ -19,7 +19,7 @@
     </div>
 </form>
 
-<form class="form form-horizontal" action="register" method="post">
+<form class="form form-horizontal" action="Login/register" method="post">
     <div class="form-group">
         <label class="control-label">User:</label>
         <input class="form-control" type="text" name="user" />
