--- a/illopintu/Views/Game/Index.cshtml
+++ b/illopintu/Views/Game/Index.cshtml
@@ -17,7 +17,7 @@
     var clickDrag = new Array();
     var paint;
     var id;
-    var User = "patata";
+    var User = @ViewBag.user;
     var Dibujando = "username";
 
     /*Metodos de dibujo*/
