--- a/illopintu/Views/Game/Index.cshtml
+++ b/illopintu/Views/Game/Index.cshtml
@@ -18,7 +18,7 @@
     var paint;
     var id;
     var User = "@ViewBag.user";
-    var Dibujando = "";
+    var Dibujando = "patata";
 
     /*Metodos de dibujo*/
 
