--- a/illopintu/Content/Site.css
+++ b/illopintu/Content/Site.css
@@ -16,3 +16,12 @@ textarea {
     max-width: 280px;
 }
 
+#register,#login{
+    float: left;
+    padding-left:0px;
+}
+
+.body-content,.container{
+    padding:0px !important;
+}
+
