--- a/illopintu/Views/Login/Index.cshtml
+++ b/illopintu/Views/Login/Index.cshtml
@@ -3,34 +3,40 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Login</h2>
 
-<form class="form form-horizontal" action="@Url.Action("Login","Login")" method="post">
-    <div class="form-group">
-        <label class="control-label">User:</label>
-        <input class="form-control" type="text" name="user"/>
-    </div>
-    <div class="form-group">
-        <label class="control-label">Password</label>
-        <input class="form-control" type="password" name="password" />
-    </div>
-    <div class="form-group">
-        <input class="btn btn-default" type="submit" value="Login"/>        
-    </div>
-</form>
 
-<form class="form form-horizontal" action="@Url.Action("Register","Login")" method="post">
-    <div class="form-group">
-        <label class="control-label">User:</label>
-        <input class="form-control" type="text" name="user" />
-    </div>
-    <div class="form-group">
-        <label class="control-label">Password</label>
-        <input class="form-control" type="password" name="password" />
-        <input class="form-control" type="password" name="confirmarPassword" />
-    </div>
-    <div class="form-group">
-        <input class="btn btn-default" type="submit" value="register" />
-    </div>
-</form>
+<div id="login" class="col-md-6">
+    <h2>Login</h2>
+    <form class="form form-horizontal form-login" action="@Url.Action("Login","Login")" method="post">
+        <div class="form-group">
+            <label class="control-label">User:</label>
+            <input class="form-control" type="text" name="user" />
+        </div>
+        <div class="form-group">
+            <label class="control-label">Password</label>
+            <input class="form-control" type="password" name="password" />
+        </div>
+        <div class="form-group">
+            <input class="btn btn-default" type="submit" value="Login" />
+        </div>
+    </form>
+</div>
+
+<div id="register" class="col-md-6">
+    <h2>Register</h2>
+    <form class="form form-horizontal form-register" action="@Url.Action("Register","Login")" method="post">
+        <div class="form-group">
+            <label class="control-label">User:</label>
+            <input class="form-control" type="text" name="user" />
+        </div>
+        <div class="form-group">
+            <label class="control-label">Password</label>
+            <input class="form-control" type="password" name="password" />
+            <input class="form-control" type="password" name="confirmarPassword" />
+        </div>
+        <div class="form-group">
+            <input class="btn btn-default" type="submit" value="register" />
+        </div>
+    </form>
+</div>
 
