--- a/illopintu/Views/Login/Index.cshtml
+++ b/illopintu/Views/Login/Index.cshtml
@@ -3,11 +3,11 @@
     ViewBag.Title = "Index";
 }
 
-
+<div id="error"></div>
 
 <div id="login" class="col-md-6">
     <h2>Login</h2>
-    <form class="form form-horizontal form-login" action="@Url.Action("Login","Login")" method="post">
+    <form class="form form-horizontal form-login" action="@Url.Action("Login", "Login")" method="post">
         <div class="form-group">
             <label class="control-label">User:</label>
             <input class="form-control" type="text" name="user" />
@@ -24,7 +24,7 @@
 
 <div id="register" class="col-md-6">
     <h2>Register</h2>
-    <form class="form form-horizontal form-register" action="@Url.Action("Register","Login")" method="post">
+    <form class="form form-horizontal form-register" action="@Url.Action("Register", "Login")" method="post">
         <div class="form-group">
             <label class="control-label">User:</label>
             <input class="form-control" type="text" name="user" />
@@ -32,6 +32,7 @@
         <div class="form-group">
             <label class="control-label">Password</label>
             <input class="form-control" type="password" name="password" />
+            <label class="control-label">Repetir Password</label>
             <input class="form-control" type="password" name="confirmarPassword" />
         </div>
         <div class="form-group">
@@ -39,4 +40,15 @@
         </div>
     </form>
 </div>
+
+<script>
+    @if(ViewBag.error != null){
+        <text>
+    $("#error").html(@ViewBag.error);
+    $("#error").show();
+        </text>
+    };
+
+
+</script>
 
