--- a/illopintu/Views/Game/Index.cshtml
+++ b/illopintu/Views/Game/Index.cshtml
@@ -6,8 +6,8 @@
 <canvas id="canvas" width="750" height="750"></canvas>
 <textarea name="chat"></textarea>
 <input type="text" name="entrada" />
-<button onclick="enviar()">Send</button>
-<button onclick="limpiar()">Clean</button>
+<button class="btn btn-default" onclick="enviar()">Send</button>
+<button class="btn btn-default"onclick="limpiar()">Clean</button>
 
 <script>
     context = document.getElementById('canvas').getContext("2d");
