--- a/illopintu/Content/Site.css
+++ b/illopintu/Content/Site.css
@@ -18,10 +18,20 @@ textarea {
 
 #register,#login{
     float: left;
+    background-color: #f0f0f5;
+    border-radius:5px;
+    margin: 20px;
+    padding-left:50px;
 }
 
 #error{
     display:none;
+    background-color:crimson;
+    border-radius:5px;
+    color: white;
+    margin-top:25px;
+    text-align:center;
+    padding:5px;
 }
 
 
