--- a/illopintu/Views/Login/Index.cshtml
+++ b/illopintu/Views/Login/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div id="error"></div>
 
-<div id="login" class="col-md-6">
+<div id="login" class="col-md-5">
     <h2>Login</h2>
     <form class="form form-horizontal form-login" action="@Url.Action("Login", "Login")" method="post">
         <div class="form-group">
@@ -22,21 +22,21 @@
     </form>
 </div>
 
-<div id="register" class="col-md-6">
+<div id="register" class="col-md-5">
     <h2>Register</h2>
     <form class="form form-horizontal form-register" action="@Url.Action("Register", "Login")" method="post">
         <div class="form-group">
             <label class="control-label">User:</label>
             <input class="form-control" type="text" name="user" />
         </div>
-        <div class="form-group">
+        <div class="form-group pass">
             <label class="control-label">Password</label>
             <input class="form-control" type="password" name="password" />
             <label class="control-label">Repetir Password</label>
             <input class="form-control" type="password" name="confirmarPassword" />
         </div>
         <div class="form-group">
-            <input class="btn btn-default" type="submit" value="register" />
+            <input class="btn btn-default" id="register-submit" type="submit" value="register" disabled="disabled"/>
         </div>
     </form>
 </div>
@@ -44,11 +44,22 @@
 <script>
     @if(ViewBag.error != null){
         <text>
-    $("#error").html(@ViewBag.error);
-    $("#error").show();
+    $("#error").html("@ViewBag.error");
+    $("#error").show(600);
         </text>
     };
 
+    $(":input[name=confirmarPassword]").on("input", check);
+    $(".form-register>div>:input[name=password]").on("input", check);
+
+
+    function check () {
+        if ($(":input[name=confirmarPassword]").val() == $(".form-register>div>:input[name=password]").val()) {
+            $("#register-submit").removeAttr("disabled");
+        } else {
+            $("#register-submit").attr("disabled", "disabled");
+        }
+    }
 
 </script>
 
