--- a/illopintu/Views/Game/Index.cshtml
+++ b/illopintu/Views/Game/Index.cshtml
@@ -148,7 +148,7 @@
         };
 
         $.ajax({
-            url: localhost + "Logout.php",
+            url: localhost + "/Game/logout",
             type: "post",
             data: objetojson
         });
