--- a/illopintu/Content/Site.css
+++ b/illopintu/Content/Site.css
@@ -35,14 +35,22 @@ textarea {
 }
 
 #chat{
-    width : 250px;
+    width : 260px;
     height : 660px;
     background-color:white;
+    overflow-y:scroll;
+    overflow-x:hidden;
+}
+
+#chat>p{
+    width:240px;
+    display:block !important;
+    word-break:break-all;
     
 }
 
 .chat-container{
-    width: 250px;
+    width: 260px;
     height: 750px;
     border: 1px solid grey;
     margin-left:20px;
