--- a/illopintu/Views/Login/Index.cshtml
+++ b/illopintu/Views/Login/Index.cshtml
@@ -41,6 +41,11 @@
     </form>
 </div>
 
+<div id="wanwan">
+    <a href="http://loli.dance/"><img class="wanwan" src="~/Content/Images/wan wan.gif" /></a>
+    <p><----- No tocar a la mascota</p>
+</div>
+
 <script>
     @if(ViewBag.error != null){
         <text>
