--- a/illopintu/Content/Site.css
+++ b/illopintu/Content/Site.css
@@ -43,7 +43,7 @@ footer{
     height : 660px;
     overflow-y:scroll;
     overflow-x:hidden;
-    background-image: url("Images/wanwan.png");
+    background-image: url("Images/wanwanchat.png");
 }
 
 #chat>p{
