--- a/illopintu/Content/Site.css
+++ b/illopintu/Content/Site.css
@@ -40,52 +40,47 @@ footer{
 }
 
 #chat{
-    width : 370px;
+    width : 320px;
     height : 660px;
     overflow-y:scroll;
     overflow-x:hidden;
     background-image: url("Images/wanwanchat.png");
-    background-repeat:space;
 }
 
 #chat>p{
-    width:240px;
+    width:300px;
     display:block !important;
     word-break:break-all;
 }
 
-#chat>input{
-    width:160px;
+.chat-container>input{
+    width:195px;
 }
 
 .chat-container{
-    width: 370px;
+    width: 320px;
     height: 750px;
     /*border: 1px solid grey;*/
     margin-left:20px;
-    margin-top:77.85px;
+    margin-top:102.85px;
 }
 
 .canvas-container{
-    margin-top:25px;
+    margin-top:50px;
     margin-bottom:100px;
 }
 
-.canvas-container{
+.chat-container, .canvas-container{
     float : left;
 }
 
-.chat-container{
-    float:right;
-}
-
 .chat-container>.send{
-    width:100px;
+    width:120px;
 }
 
 .chat-container>.clear{
     margin-top:10px;
-    width:260px;
+    width:320px;
 }
 
 body{
