--- a/illopintu/Views/Game/Index.cshtml
+++ b/illopintu/Views/Game/Index.cshtml
@@ -77,7 +77,7 @@
     function redraw(){
         //context.clearRect(0, 0, context.canvas.width, context.canvas.height); // Clears the canvas
 
-        context.strokeStyle = "#df4b26";
+        context.strokeStyle = "black";
         context.lineJoin = "round";
         context.lineWidth = 10;
 
