--- a/illopintu/Views/Login/Index.cshtml
+++ b/illopintu/Views/Login/Index.cshtml
@@ -41,9 +41,11 @@
     </form>
 </div>
 
-<div id="wanwan">
-    <a href="http://loli.dance/"><img class="wanwan" src="~/Content/Images/wan wan.gif" /></a>
-    <p><----- No tocar a la mascota</p>
+<div class="row">
+    <div id="wanwan" class="col-sm-10 col-sm-offset-1">
+        <a href="http://loli.dance/"><img class="wanwan" src="~/Content/Images/wan wan.gif" /></a>
+        <img class="col-sm-6 texto" src="~/Content/Images/texto (2).png"/>
+    </div>
 </div>
 
 <script>
